--- a/_posts/2022-09-27-union.md
+++ b/_posts/2022-09-27-union.md
@@ -2,7 +2,7 @@
 title: Union
 author: ipa
 date: 2022-09-27
-categories: [C Language]
+categories: [C-Cpp Language]
 tags: [coding, c, theory]
 ---
 
