update some tags

--- a/_posts/2022-10-02-union.md
+++ b/_posts/2022-10-02-union.md
@@ -3,7 +3,7 @@ title: Union
 author: ipa
 date: 2022-10-02
 categories: [C-Cpp Language]
-tags: [coding, c, theory]
+tags: [coding, c, cpp]
 ---
 
 ## Overview
